--- a/src/bootstrap_sandbox.html
+++ b/src/bootstrap_sandbox.html
@@ -12,7 +12,7 @@
         rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
         crossorigin="anonymous" -->
-    <link href="css/main.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <div class="container-md my-5">
@@ -31,7 +31,8 @@
 
         <div class="col-sm-4 col-lg-3">
           <div class="bg-primary p-5 text-light">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor, ante sed porta sagittis, massa tortor mollis nisi, id scelerisque massa ex sit amet diam. Sed faucibus tincidunt nisl nec rhoncus. In risus ligula, consectetur ut augue eget, ullamcorper rhoncus turpis. Praesent sed scelerisque lectus. Nam faucibus nibh in risus pulvinar, ac ornare velit mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet euismod nibh, quis ultricies tortor. Maecenas posuere bibendum mauris, sed porta ligula congue sed. Sed at tortor id lectus posuere imperdiet. Curabitur et pulvinar risus.</p>
+            <p>$ npm install -g sass</p>
+            <p>$ sass src/scss:src/css </p>
           </div>
         </div>
       </div>
