--- a/src/bootstrap_sandbox.html
+++ b/src/bootstrap_sandbox.html
@@ -12,9 +12,15 @@
         rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
         crossorigin="anonymous" -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"> -->
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container-md my-5">
+      <p>Cool <i class="bi bi-linkedin"></i></p>
+      <p>Yes! <i class="fas fa-house"></i></p>
+    </div>
+
     <div class="container-md my-5">
       <h2>Responsive Column Widths</h2>
       <div class="row">
@@ -121,6 +127,8 @@
 
       <p>Phasellus viverra dignissim vehicula. Suspendisse sed ligula ac libero porta venenatis. Ut cursus vitae enim nec vehicula. Fusce ornare massa id eros imperdiet, at tempus est commodo. Ut rutrum, magna non tincidunt dignissim, dolor diam feugiat urna, quis dapibus felis nibh ac justo. Integer egestas felis ac turpis ornare vestibulum. Aliquam vehicula lectus nec augue vehicula, ut finibus eros volutpat. Nunc eu urna placerat, fermentum eros ac, gravida tortor. Proin vestibulum, arcu sit amet consectetur sollicitudin, nisl ante finibus ligula, in sollicitudin massa eros non nisi. Aenean vel eros volutpat ipsum porta dignissim faucibus sit amet lorem.</p>
     </div>
+
+    <script src="https://kit.fontawesome.com/6dc7e86d89.js" crossorigin="anonymous"></script>
 
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
