--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,45 @@
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="container-lg">
+
+
+      <section id="intro" class="row">
+        <div class="col-md-12 col-lg-4">
+          <p class="lead">Abrahim Gaber</p>
+          <p>Software Engineer</p>
+          <p>New York Metropolitan Area</p>
+          <span class="intro-icons">
+            <span>
+              <a href="https://www.linkedin.com/in/agaber/" rel="noopener noreferrer" target="_blank" title="LinkedIn">
+                Cool
+              </a>
+            </span>
+            <span>
+              <a href="https://github.com/agaber" rel="noopener noreferrer" target="_blank" title="GitHub">
+                <i class="bi bi-github"></i>
+              </a>
+            </span>
+            <span>
+              <a href="mailto:abrahim.gaber@gmail.com" title="Email me">
+                <i class="bi bi-envelope-at"></i>
+              </a>
+            </span>
+            <span>
+              <a href="https://docs.google.com/document/d/e/2PACX-1vSHomHFHKQ_o6EHHPKZHssZc3gfVRRNEBlwqnTbOZMeD_rUrTcRI0qI51B6bXZvIUmd6BphP6SNtvIO/pub" rel="noopener noreferrer" target="_blank" title="CV">
+                <i class="bi bi-file-earmark-text"></i>
+              </a>
+            </span>
+          </span>
+        </div>
+
+        <div class="col-md-12 col-lg-8">
+          <img src="assets/profilepic2.png" alt="Profile Picture" />
+        </div>
+      </section>
+
+
+    </div>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
