--- a/src/bootstrap_sandbox.html
+++ b/src/bootstrap_sandbox.html
@@ -12,12 +12,13 @@
         rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
         crossorigin="anonymous" -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"> -->
-    <link href="css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="container-md my-5">
       <p>Cool <i class="bi bi-linkedin"></i></p>
+      <p>List <i class="bi bi-list"></i></p>
       <p>Yes! <i class="fas fa-house"></i></p>
     </div>
 
