--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>Abrahim Gaber's Portfolio</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container-lg">
+    <div class="container-md">
 
 
       <section id="intro" class="row">
@@ -21,7 +22,7 @@
           <span class="intro-icons">
             <span>
               <a href="https://www.linkedin.com/in/agaber/" rel="noopener noreferrer" target="_blank" title="LinkedIn">
-                Cool
+                <i class="bi bi-linkedin"></i>
               </a>
             </span>
             <span>
