Updated intro section.
I will change this a lot more later but committing this for now and moving to other sections for the time being.

--- a/src/index.html
+++ b/src/index.html
@@ -11,40 +11,45 @@
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container-md">
+    <div class="container-fluid bg-primary text-light">
+      <section id="intro">
+        <div class="row">
 
+          <div class="col-md-12 d-md-block d-lg-none text-center">
+            <img class="img-fluid" id="profile-pic" alt="Profile Picture" src="assets/profilepic2.png" />
+          </div>
 
-      <section id="intro" class="row">
-        <div class="col-md-12 col-lg-4">
-          <p class="lead">Abrahim Gaber</p>
-          <p>Software Engineer</p>
-          <p>New York Metropolitan Area</p>
-          <span class="intro-icons">
-            <span>
-              <a href="https://www.linkedin.com/in/agaber/" rel="noopener noreferrer" target="_blank" title="LinkedIn">
-                <i class="bi bi-linkedin"></i>
-              </a>
+          <div class="col-md-12 col-lg-6 text-center">
+            <p class="lead display-4">Abrahim Gaber</p>
+            <p class="sublead">Software Engineer</p>
+            <p class="sublead">New York Metropolitan Area</p>
+            <span class="profile-icons">
+              <span>
+                <a href="https://www.linkedin.com/in/agaber/" rel="noopener noreferrer" target="_blank" title="LinkedIn">
+                  <i class="bi bi-linkedin"></i>
+                </a>
+              </span>
+              <span>
+                <a href="https://github.com/agaber" rel="noopener noreferrer" target="_blank" title="GitHub">
+                  <i class="bi bi-github"></i>
+                </a>
+              </span>
+              <span>
+                <a href="mailto:abrahim.gaber@gmail.com" target="_blank" title="Email me">
+                  <i class="bi bi-envelope-at-fill"></i>
+                </a>
+              </span>
+              <span>
+                <a href="https://docs.google.com/document/d/e/2PACX-1vSHomHFHKQ_o6EHHPKZHssZc3gfVRRNEBlwqnTbOZMeD_rUrTcRI0qI51B6bXZvIUmd6BphP6SNtvIO/pub" rel="noopener noreferrer" target="_blank" title="CV">
+                  <i class="bi bi-file-earmark-text-fill"></i>
+                </a>
+              </span>
             </span>
-            <span>
-              <a href="https://github.com/agaber" rel="noopener noreferrer" target="_blank" title="GitHub">
-                <i class="bi bi-github"></i>
-              </a>
-            </span>
-            <span>
-              <a href="mailto:abrahim.gaber@gmail.com" title="Email me">
-                <i class="bi bi-envelope-at"></i>
-              </a>
-            </span>
-            <span>
-              <a href="https://docs.google.com/document/d/e/2PACX-1vSHomHFHKQ_o6EHHPKZHssZc3gfVRRNEBlwqnTbOZMeD_rUrTcRI0qI51B6bXZvIUmd6BphP6SNtvIO/pub" rel="noopener noreferrer" target="_blank" title="CV">
-                <i class="bi bi-file-earmark-text"></i>
-              </a>
-            </span>
-          </span>
-        </div>
+          </div>
 
-        <div class="col-md-12 col-lg-8">
-          <img src="assets/profilepic2.png" alt="Profile Picture" />
+          <div class="col-lg-6 d-none d-lg-block text-centers">
+            <img class="img-fluid" id="profile-pic" alt="Profile Picture" src="assets/profilepic2.png" />
+          </div>
         </div>
       </section>
 
