Added icons to experience sections.

--- a/src/index.html
+++ b/src/index.html
@@ -90,116 +90,148 @@
       <section id="experience">
         <div class="row">
           <div class="col-2"><h4>Experience</h4></div>
-          <div class="col-md-12 col-lg-10">
-            <div id="experience-yt" class="experience-section">
-              <title>Senior Software Engineer / TL, Scaled Music Curation</title>
-              <div>
-                <span class="company yt">YouTube</span>
-                <span class="year">2018-2023</span>
+
+          <div class="col-md-12 col-lg-10 col-xl-12">
+            <div class="row">
+              <div id="yt" class="d-none d-md-block col-1"></div>
+              <div class="col">
+                <div class="experience-section">
+                  <div class="title">Senior Software Engineer / TL, Scaled Music Curation</div>
+                  <div class="subtitle"><span>YouTube</span><span>2018-2023</span></div>
+                  <ul>
+                    <li>
+                      Designed scalable systems for managing YouTube’s vast corpus of artist and user
+                      generated music content which resulted in a 43% improvement in key music metadata
+                      metrics.
+                    </li>
+                    <li>
+                      Team Lead (TL); defined near + long term objectives and strategies; maintained
+                      high system availability; mentorship.
+                    </li>
+                    <li>
+                      Hands-on full-stack engineer; Polymer & TypeScript UI; Microservices; REST and
+                      RPC APIs; Spanner database design & optimization; Data Analytics and custom
+                      dashboarding; Java Readability reviewer/mentor.
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <ul>
-                <li>
-                  Designed scalable systems for managing YouTube’s vast corpus of artist and user generated music content which resulted in a 43% improvement in key music metadata metrics.
-                </li>
-                <li>
-                  Team Lead (TL); defined near + long term objectives and strategies; maintained high system availability; mentorship.
-                </li>
-                <li>
-                  Hands-on full-stack engineer; Polymer & TypeScript UI; Microservices; REST and RPC APIs; Spanner database design & optimization; Data Analytics and custom Dashboarding; Java Readability reviewer/mentor.
-                </li>
-              </ul>
             </div>
 
-            <div id="experience-goog" class="experience-section">
-              <title>Senior Software Engineer, CorpEng & Enterprise Legal Apps</title>
-              <div>
-                <span class="company goog">Google</span>
-                <span class="year">2015-2018</span>
+            <div class="row">
+              <div id="goog" class="d-none d-md-block col-1"></div>
+              <div class="col">
+                <div class="experience-section">
+                  <div class="title">Senior Software Engineer, CorpEng & Enterprise Legal Apps</div>
+                  <div class="subtitle"><span>Google</span><span>2015-2018</span></div>
+                  <ul>
+                    <li>
+                      Indexed legal documents and made them available for structured and unstructured
+                      search to Google's legal teams.
+                    </li>
+                    <li>
+                      Created ETL (extract, transform, load) pipelines using Google Cloud Platform
+                      (GCP) and proprietary distributed systems.
+                    </li>
+                    <li>
+                      Full stack contributions. AngularJS; AppEngine; BigQuery; Google Cloud SQL;
+                      Google Cloud PubSub; Hibernate; JavaScript; Java.
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <ul>
-                <li>
-                  Indexed legal documents and made them available for structured and unstructured search to Google’s legal teams.
-                </li>
-                <li>
-                  Created ETL (extract, transform, load) pipelines using Google Cloud Platform (GCP) and proprietary distributed systems.
-                </li>
-                <li>
-                  Full stack contributions. AngularJS; AppEngine; BigQuery; Google Cloud SQL; Google Cloud PubSub; Hibernate; JavaScript; Java.
-                </li>
-              </ul>
             </div>
 
-            <div id="experience-goog" class="experience-section">
-              <title>Software Engineer, Google Ads</title>
-              <div>
-                <span class="company goog">Google</span>
-                <span class="year">2008-2015</span>
+            <div class="row">
+              <div id="goog1" class="d-none d-md-block col-1"></div>
+              <div class="col">
+                <div class="experience-section">
+                  <div class="title">Software Engineer, Ads</div>
+                  <div class="subtitle"><span>Google</span><span>2008-2015</span></div>
+                  <ul>
+                    <li>
+                      Designed buy-side products that enabled clients to traffic highly visible ad
+                      campaigns efficiently.
+                    </li>
+                    <li>
+                      Built big data pipelines by leveraging Google proprietary distributed systems,
+                      NoSQL databases, Master Election and async notification systems (pub/sub).
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <ul>
-                <li>
-                  Designed buy-side products that enabled clients to traffic highly visible ad campaigns efficiently.
-                </li>
-                <li>
-                  Built big data pipelines by leveraging Google proprietary distributed systems, NoSQL databases, Master Election and async notification systems (pub/sub).
-                </li>
-              </ul>
             </div>
 
-            <div id="experience-dclk" class="experience-section">
-              <title>Software Developer</title>
-              <div>
-                <span class="company dclk">DoubleClick</span>
-                <span class="year">2008</span>
+            <div class="row">
+              <div id="dclk" class="d-none d-md-block col-1"></div>
+              <div class="col">
+                <div class="experience-section">
+                  <div class="title">Software Developer</div>
+                  <div class="subtitle"><span>DoubleClick</span><span>2008</span></div>
+                  <ul>
+                    <li>
+                      Built web applications that let customers manage their ad campaigns using
+                      C# and ASP.NET.
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <ul>
-                <li>
-                  Built web applications that let customers manage their ad campaigns using C# and ASP.NET.
-                </li>
-              </ul>
             </div>
 
-            <div id="experience-medidata" class="experience-section">
-              <title>Software Developer</title>
-              <div>
-                <span class="company medidata">Medidata Solutions</span>
-                <span class="year">2005-2008</span>
+            <div class="row">
+              <div id="medidata" class="d-none d-md-block col-1"></div>
+              <div class="col">
+                <div class="experience-section">
+                  <div class="title">Software Developer</div>
+                  <div class="subtitle"><span>Medidata Solutions</span><span>2005-2008</span></div>
+                  <ul>
+                    <li>
+                      Integrated custom functionality into base enterprise web applications that captured and reported on clinical trial data.
+                    </li>
+                    <li>
+                      Delivered results using C#, ASP.NET and Microsoft SQL Server.
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <ul>
-                <li>
-                  Integrated custom functionality into base enterprise web applications that captured and reported on clinical trial data.
-                </li>
-                <li>
-                  Delivered results using C#, ASP.NET and Microsoft SQL Server.
-                </li>
-              </ul>
             </div>
 
-            <div id="experience-4gd" class="experience-section">
-              <title>Computer Hardware Technician</title>
-              <div>
-                <span class="company 4gd">4G DATA SYSTEMS</span>
-                <span class="year">2004 - 2005</span>
+            <div class="row">
+              <div id="fourgd" class="d-none d-md-block col-1"></div>
+              <div class="col">
+                <div class="experience-section">
+                  <div class="title">Computer Hardware Technician</div>
+                  <div class="subtitle"><span>4G Data Systems</span><span>2004 - 2005</span></div>
+                  <ul>
+                    <li>
+                      Repaired IBM PC compatible computer hardware, servers, laptops, and printers.
+                    </li>
+                    <li>
+                      Certified CompTIA A+ and Network+ professional.
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <ul>
-                <li>
-                  Repaired IBM PC compatible computer hardware, servers, laptops, and printers.
-                </li>
-                <li>
-                  Certified CompTIA A+ and Network+ professional.
-                </li>
-              </ul>
             </div>
           </div>
+        </div>
       </section>
 
       <section id="education">
         <div class="row">
           <div class="col-2"><h4>Education</h4></div>
-          <div class="col-md-12 col-lg-10">
-            <div id="edu" class="edu-section">
-              <title>B.S. Computer Science</title>
-              <div>
-                <span class="company csi">City University of New York -- College of Staten Island</span>
+          <div class="col-md-12 col-lg-10 col-xl-12">
+
+            <div class="row">
+              <div id="csi" class="d-none d-md-block col-1"></div>
+              <div class="col">
+                <div class="experience-section">
+                  <div class="title">B.S., Computer Science</div>
+                  <div class="subtitle">
+                    <span>City University of New York -- College of Staten Island</span>
+                    <span>2004</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -209,7 +241,7 @@
       <section id="skills">
         <div class="row">
           <div class="col-2"><h4>Skills</h4></div>
-          <div class="col-md-12 col-lg-10">
+          <div class="col-md-12 col-lg-10 col-xl-12">
             <span class="badge badge-secondary">Java</span>
           </div>
         </div>
@@ -218,7 +250,7 @@
       <section id="projects">
         <div class="row">
           <div class="col-2"><h4>Projects</h4></div>
-          <div class="col-md-12 col-lg-10">
+          <div class="col-md-12 col-lg-10 col-xl-12">
             <p>Reddit bots</p>
             <p>Vote App</p>
           </div>
