--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,9 @@
 <!doctype html>
 
 <!-- TODO: Navbar -->
-<!-- TODO: Update Intro styles -->
-<!-- TODO: Experience and Education styles including sprites -->
 <!-- TODO: Do entire projects section -->
 <!-- TODO: Google Analytics -->
 <!-- TODO: Docker, K8s -->
-<!-- TODO: Fonts -->
 <!-- TODO: Photo -->
 
 <html lang="en">
@@ -39,12 +36,12 @@
               </a>
             </span>
             <span>
-              <a href="mailto:abrahim.gaber@gmail.com" target="_blank" title="Email me">
+              <a href="mailto:abrahimagaber@gmail.com" target="_blank" title="Email me">
                 <i class="bi bi-envelope-at-fill"></i>
               </a>
             </span>
             <span>
-              <a href="https://docs.google.com/document/d/e/2PACX-1vSHomHFHKQ_o6EHHPKZHssZc3gfVRRNEBlwqnTbOZMeD_rUrTcRI0qI51B6bXZvIUmd6BphP6SNtvIO/pub" rel="noopener noreferrer" target="_blank" title="CV">
+              <a href="assets/abrahim_gaber_cv.pdf" rel="noopener noreferrer" target="_blank" title="Download Resume">
                 <i class="bi bi-file-earmark-text-fill"></i>
               </a>
             </span>
@@ -58,7 +55,10 @@
         <div class="row">
           <div class="col-2"><h4>About me</h4></div>
           <div class="col-md-12 col-lg-10 col-xl-12">
-            <p>Hi! 👋 My name is Abrahim but feel free to just call me Abe. 🙂</p>
+            <p>
+              Hi! 👋 My name is Abrahim but feel free to just call me Abe. 🙂 I was born and raised in
+              Brooklyn, NY and currently reside in Northern New Jersey.
+            </p>
 
             <p>
               I'm a software engineer by trade with professional experience deliving products at
