--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,42 @@
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    <div id="info-container" class="container-fluid bg-primary p-3 text-light">
+    <div id="info-container" class="container-fluid bg-primary pb-3 text-light">
+      <nav class="navbar navbar-expand-sm navbar-dark ">
+        <div class="container-xxl">
+          <button
+              aria-controls="main-nav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+              class="navbar-toggler"
+              data-bs-target="#main-nav"
+              data-bs-toggle="collapse"
+              type="button">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div id="main-nav" class="align-left collapse justify-content-center navbar-collapse">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#about">About Me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#experience">Experience</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#education">Education</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#skills">Skills</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#projects">Projects</a>
+              </li>
+            </ul>
+          </div>
+         </div>
+      </nav>
+
       <section id="info">
         <div>
           <img id="profile-pic" alt="Profile Picture" src="assets/profilepic2.png" />
