Add skills badges.

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQCFH37SZC"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQCFH37SZC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-JQCFH37SZC');
-    </script>
+    </script> -->
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -133,12 +133,12 @@
             <div class="row">
               <div id="yt" class="d-none d-md-block col-1"></div>
               <div class="col">
-                <div class="experience-section">
+                <div>
                   <div class="title">Senior Software Engineer / TL, Scaled Music Curation</div>
                   <div class="subtitle"><span>YouTube</span><span>2018-2023</span></div>
                   <ul>
                     <li>
-                      Designed scalable systems for managing YouTube’s vast corpus of artist and user
+                      Designed scalable systems for managing YouTube's vast corpus of artist and user
                       generated music content which resulted in a 43% improvement in key music metadata
                       metrics.
                     </li>
@@ -159,7 +159,7 @@
             <div class="row">
               <div id="goog" class="d-none d-md-block col-1"></div>
               <div class="col">
-                <div class="experience-section">
+                <div>
                   <div class="title">Senior Software Engineer, CorpEng & Enterprise Legal Apps</div>
                   <div class="subtitle"><span>Google</span><span>2015-2018</span></div>
                   <ul>
@@ -183,7 +183,7 @@
             <div class="row">
               <div id="goog1" class="d-none d-md-block col-1"></div>
               <div class="col">
-                <div class="experience-section">
+                <div>
                   <div class="title">Software Engineer, Ads</div>
                   <div class="subtitle"><span>Google</span><span>2008-2015</span></div>
                   <ul>
@@ -203,7 +203,7 @@
             <div class="row">
               <div id="dclk" class="d-none d-md-block col-1"></div>
               <div class="col">
-                <div class="experience-section">
+                <div>
                   <div class="title">Software Developer</div>
                   <div class="subtitle"><span>DoubleClick</span><span>2008</span></div>
                   <ul>
@@ -219,7 +219,7 @@
             <div class="row">
               <div id="medidata" class="d-none d-md-block col-1"></div>
               <div class="col">
-                <div class="experience-section">
+                <div>
                   <div class="title">Software Developer</div>
                   <div class="subtitle"><span>Medidata Solutions</span><span>2005-2008</span></div>
                   <ul>
@@ -237,7 +237,7 @@
             <div class="row">
               <div id="fourgd" class="d-none d-md-block col-1"></div>
               <div class="col">
-                <div class="experience-section">
+                <div>
                   <div class="title">Computer Hardware Technician</div>
                   <div class="subtitle"><span>4G Data Systems</span><span>2004 - 2005</span></div>
                   <ul>
@@ -259,11 +259,10 @@
         <div class="row">
           <div class="col-2"><h4>Education</h4></div>
           <div class="col-md-12 col-lg-10 col-xl-12">
-
             <div class="row">
               <div id="csi" class="d-none d-md-block col-1"></div>
               <div class="col">
-                <div class="experience-section">
+                <div>
                   <div class="title">B.S., Computer Science</div>
                   <div class="subtitle">
                     <span>City University of New York -- College of Staten Island</span>
@@ -280,7 +279,48 @@
         <div class="row">
           <div class="col-2"><h4>Skills</h4></div>
           <div class="col-md-12 col-lg-10 col-xl-12">
-            <span class="badge badge-secondary">Java</span>
+            <div class="skills-section">
+              <div class="title">Programming Languages</div>
+              <span class="badge bg-primary">Java</span>
+              <span class="badge bg-primary">Python</span>
+              <span class="badge bg-primary">JavaScript</span>
+              <span class="badge bg-primary">TypeScript</span>
+              <span class="badge bg-primary">C#</span>
+              <span class="badge bg-primary">C++</span>
+              <span class="badge bg-primary">SQL</span>
+              <span class="badge bg-primary">CSS</span>
+              <span class="badge bg-primary">Sass</span>
+              <span class="badge bg-primary">HTML</span>
+            </div>
+
+            <div class="skills-section">
+              <div class="title">Platforms, Frameworks & Tools</div>
+              <span class="badge bg-primary">Kubernetes</span>
+              <span class="badge bg-primary">gRPC</span>
+              <span class="badge bg-primary">Spring</span>
+              <span class="badge bg-primary">MongoDB</span>
+              <span class="badge bg-primary">MySQL</span>
+              <span class="badge bg-primary">Cloud SQL</span>
+              <span class="badge bg-primary">Linux</span>
+              <span class="badge bg-primary">Git</span>
+              <span class="badge bg-primary">Sass</span>
+              <span class="badge bg-primary">Mercurial</span>
+              <span class="badge bg-primary">Google Cloud Platform (GCP)</span>
+              <span class="badge bg-primary">Bootstrap</span>
+              <span class="badge bg-primary">Docker</span>
+            </div>
+
+            <div class="skills-section">
+              <div class="title">General</div>
+              <span class="badge bg-primary">Distributed Systems</span>
+              <span class="badge bg-primary">API Design</span>
+              <span class="badge bg-primary">REST</span>
+              <span class="badge bg-primary">Frontend Web Development</span>
+              <span class="badge bg-primary">Backend Systems Design</span>
+              <span class="badge bg-primary">PubSub</span>
+              <span class="badge bg-primary">Big Data</span>
+              <span class="badge bg-primary">SQL and NoSQL Databases</span>
+            </div>
           </div>
         </div>
       </section>
@@ -289,8 +329,8 @@
         <div class="row">
           <div class="col-2"><h4>Projects</h4></div>
           <div class="col-md-12 col-lg-10 col-xl-12">
-            <p>Reddit bots</p>
-            <p>Vote App</p>
+            <div class="title">Reddit bots</div>
+            <div class="title">Vote App</div>
           </div>
         </div>
       </section>
