Wordsmith the about me section a bit.

--- a/src/index.html
+++ b/src/index.html
@@ -100,15 +100,14 @@
 
             <p>
               I'm a software engineer by trade with professional experience deliving products at
-              scale to solve challenging problems with elegant solutions. I consider myself a
-              generalist and a full stack engineer with a foundation in computer science
-              fundamentals. In my professional career I have worked with distributed cloud systems,
-              SQL and NoSQL databases, a variety of frontend frameworks, data processing and ETL
-              pipelines and more using Big Tech proprietary tools.
+              scale. I consider myself a generalist and a full stack engineer with a foundation in
+              computer science fundamentals. In my professional career I have worked with distributed
+              cloud systems, SQL and NoSQL databases, a variety of frontend frameworks, data
+              processing and ETL pipelines and more using Big Tech proprietary tools.
             </p>
 
             <p>
-              Over the past few years I have also increasingly taken on more leadership
+              As my professional career has progressed, I have increasingly taken on more leadership
               responsibilities. I embrace the opportunity to design simple solutions to complex
               problems, propose technical and product direction and mentor friends and colleagues.
               All that said, there is still a lot for me to learn and I also look forward to learning
@@ -116,10 +115,10 @@
             </p>
 
             <p>
-              They say "love what you do and never work a day in your life" and I think I agree. I
-              have no interest in finding a "real job". I enjoy solving problems, being creative
-              and learning new things. I am open to new opportunities to apply my skills in a way
-              that helps make the world better and more fun for everyone.
+              I think the expression "love what you do and never work a day in your life" rings true
+              to me. I have little interest in finding a "real job". I enjoy solving problems, being
+              creative and learning new things. I am open to new opportunities to apply my skills in
+              a way that helps make the world better and more fun for everyone.
             </p>
           </div>
         </div>
