--- a/src/index.html
+++ b/src/index.html
@@ -365,6 +365,10 @@
           </div>
         </div>
       </section>
+
+      <section id="footer">
+        <div class="container-xs justify-content-center">© Copyright 2023 Abrahim Gaber</div>
+      </section>
     </div>
 
     <script
